# freecell

./: .gitignore  README.md  _codeql_detected_source_root
decomp/FreeCell_export/: ATL_dynamic_atexit_destructor_for_AtlWinModule_.c  ATL_dynamic_initializer_for_AtlWinModule_.c  ChangeAppearenceDialog_LogErrorCallback.c  ChangeAppearenceDialog_StreamFromFileCallback.c  CheckTextureRequirements.c  CtlProcButton.c  CtlProcEdit.c  CtlProcGroupbox.c  CtlProcRadioOrCheck.c  CtlProcTrackBar.c  D3DXCpuOptimizations.c  D3DXCreateFontW.c  D3DXCreateSprite.c  D3DXTex_DecodePremult.c  D3DXTex_Encode565.c  D3DXTex_EncodeDXT1.c  D3DXTex_LF_SetupLinear.c  D3DXTex_OptimizeAlpha.c  D3DXTex_OptimizeRGB.c  D3DXTex_ScoreFormat.c  D3DXTex_TF_SetupTriangle.c  D3DXTex_c_BoxFilter2D_X8R8G8B8.c  D3DXTex_init_BoxFilter2D_A8R8G8B8.c  D3DXTex_init_BoxFilter2D_X8R8G8B8.c  DialogProc.c  FreeCellGame.c  GetD3DRegValue.c  LocalizeDeckOrBackgroundName.c  LoseDialog_DialogProc.c  OnCommand.c  OptionsDialog_DialogProc.c  OptionsDialog_OnCommand.c  OptionsDialog_OnDialogInit.c  OptionsDialog_OnOkButton.c  SaveSurfaceToFile.c  SharedDialogs_ChangeAppearance_DialogProc.c  SharedDialogs_ChangeAppearance_ExitCleanup.c  SharedDialogs_ChangeAppearance_LogCallback.c  (+1158 more)
freecell/: CMakeLists.txt  DialogHelper.cpp  DialogHelper.h  EngineHandler.cpp  EngineHandler.h  FreeCellGame.cpp  FreeCellGame.h  IEngineInterface.h  InitializeEngine.cpp  InitializeEngine.h  Makefile  globals.cpp  types.h  winmain.cpp
freecell/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
